--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
+    <!-- <link rel="icon" href="favicon.ico" type="image/x-icon"> -->
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌮</text></svg>">
     <link rel="stylesheet" href="/css/style.css">
     <title>LTS Home</title>
 </head>
@@ -17,8 +18,8 @@
                 <ul>
                     <li><a href="#AboutLTS">About LTS</a></li>
                     <li><a href="#OurMenu">Our Menu</a></li>
-                    <li><a href="/hours.html">Store Hours</a></li>
-                    <li><a href="">Contact Us</a></li>
+                    <li><a href="hours.html">Store Hours</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
             <figure>
