--- a/hours.html
+++ b/hours.html
@@ -4,8 +4,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌮</text></svg>">
     <link rel="stylesheet" href="css/style.css">
-    <title>LTS Hours</title>
+    <title>Hours LTS</title>
 </head>
 <body>
     <main>
@@ -13,10 +14,10 @@
             <h1>Little Taco Shop Hours</h1>
             <nav>
                 <ul>
-                    <li><a href="/index.html">Home</a></li>
-                    <li><a href="#AboutLTS">About LTS</a></li>
-                    <li><a href="#OurMenu">Our Menu</a></li>
-                    <li><a href="#ContactUs">Contact Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="index.html#AboutLTS">About LTS</a></li>
+                    <li><a href="index.html#OurMenu">Our Menu</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
             <figure>
