fixing some mistakes

--- a/contact.html
+++ b/contact.html
@@ -10,18 +10,18 @@
 </head>
 <body>
     <main>
-        <h1>Contact Us</h1>
         <header>
+            <h1>Contact Us</h1>
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#AboutLTS">About LTS</a></li>
+                    <li><a href="index.html#AboutLTS">About <abbr title="The Little Taco Shop">LTS</abbr></a></li>
                     <li><a href="index.html#OurMenu">Our Menu</a></li>
                     <li><a href="hours.html#Hours">Store Hours</a></li>
                 </ul>
             </nav>
             <figure>
-                <img src="img/tacos_close_up_400x260.png" width="400" height="260" alt="Tacos in a close up">
+                <img src="img/tacos_close_up_400x260.png" width="400" height="260" alt="Tacos in a close up" title="Delicious tacos">
                 <figcaption>Little Taco Shop Tacos</figcaption>
             </figure>
         </header>
