--- a/hours.html
+++ b/hours.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text y=%22.9em%22 font-size=%2290%22>🌮</text></svg>">
+    <!-- <link rel="shortcut icon" href="favicon.ico" type="image/x-icon"> -->
     <link rel="stylesheet" href="css/style.css">
     <title>Hours LTS</title>
 </head>
@@ -15,13 +16,13 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a href="index.html#AboutLTS">About LTS</a></li>
+                    <li><a href="/#AboutLTS">About <abbr title="The Little Taco Shop">LTS</abbr></a></li>
                     <li><a href="index.html#OurMenu">Our Menu</a></li>
                     <li><a href="contact.html">Contact Us</a></li>
                 </ul>
             </nav>
             <figure>
-                <img src="img/tacos_tray_400x267.png" alt="A tray with 3 tacos" width="400" height="267">
+                <img src="img/tacos_tray_400x267.png" alt="A tray with 3 tacos" width="400" height="267" title="We make the best tacos">
                 <figcaption> A Tray of Tasty Tacos</figcaption>
             </figure>
         </header>
